--- a/style.css
+++ b/style.css
@@ -1,7 +1,177 @@
+html{
+	overflow-x: hidden;
+}
 #menu
 {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
 	position: fixed;
 	width: 100%;
-	height: 35px;
-	background: white;
+	height: 50px;
+	background-color: #333;
+	display: flex;
+	align-items: stretch;
+}
+li a {
+	height: auto !important;
+	height: 100%;
+	display: block;
+	color: white;
+	text-align: center;
+	font-family: 'Roboto', sans-serif;
+	font-size: 20px;
+	padding-top: 10px;
+	padding-left: 16px;
+	padding-right: 16px;
+	text-decoration: none;
+	font-weight: 800;
+	letter-spacing: 1px;
+}
+li img{
+	padding-top: 10px;
+	width: 40px;
+	height: 30px;
+}
+
+li a:hover{
+	min-height: 72%;
+	background-color: rgb(107, 107, 107);
+	border-bottom: 5px solid rgb(210, 210, 210);
+	transition: all 0.4s ease;
+}
+
+body{
+	height: auto;
+	width: auto;
+	min-height: 100%;
+	margin: 0;
+	background: url("resources/rsz_back2.png"), url("resources/back.png");
+	background-position: top, center;
+	background-repeat:  no-repeat, no-repeat;
+	background-size: 100% 100%, cover;
+	background-attachment: fixed;
+}
+.section{
+	text-align: center;
+}
+h1{
+	color: #FFFDD0;
+	font-family: 'Droid serif', serif;
+	font-size: 70px;
+	font-weight: 800;
+	font-style: italic;
+	line-height: 44px;
+	margin: 0 0 12px;
+	text-align: center
+}
+#about p{
+	color: white; 
+	font: bold 24px/45px 'Open Sans', sans-serif; 
+	background: rgb(64, 71, 103);
+	background: rgba(64, 71, 103, 0);
+	padding-left: 20%;
+	text-align: left;
+	width: auto;
+	min-width: 100%;
+	line-height: 40px;
+	text-shadow: 0 5px 5px rgb(34, 34, 34);
+}
+#contact p{
+	color: white; 
+	font: bold 24px/45px 'Open Sans', sans-serif; 
+	background: rgb(64, 71, 103);
+	background: rgba(64, 71, 103, 0);
+	text-align: left;
+	width: auto;
+	min-width: 100%;
+	line-height: 40px;
+	text-shadow: 0 5px 5px rgb(34, 34, 34);
+}
+form{
+	text-align: left;
+	background: rgba(240, 248, 255, 0.4);
+	margin-left: 20%;
+	margin-right: 15%;
+	border-radius: 45px;
+}
+form label{
+	font-family: 'Roboto', sans-serif;
+  	font-style: italic;
+	font-weight: lighter;
+	font-size: 36px;
+	color: rgba(15, 15, 15, 0.66);
+	padding-left: 22%;
+}
+form input[type=email], textarea{
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	padding: 20px;
+	border-radius: 45px;
+	margin-left: 20%;
+	scrollbar-shadow-color: 1px #111;
+	font-size: 18px;
+	margin-top: 8px;
+	margin-bottom: 40px;
+}
+form input[type=submit], input[type=reset]{
+	font-size: 18px;
+	border: 1px solid #111;
+	width: 100px;
+	height: 50px;
+	margin-left: 37%;
+	margin-bottom: 16px;
+	letter-spacing: 1.5px;
+	border-radius: 100px;
+	cursor: pointer;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
+	transition: all 0.3s ease 0s;
+}
+input[type=reset]{
+	margin-left: 5%;
+}
+form p{
+	padding-left: 28%;
+}
+form input[type=submit]:hover, input[type=reset]:hover{
+	opacity: 0.4;
+	transform: translateY(-5px);
+	box-shadow: 0px 20px 20px 10px rgba(42, 48, 46, 0.4);
+}
+#spa ul{
+	color: white; 
+	font: bold 24px/45px 'Open Sans', sans-serif; 
+	background: rgb(64, 71, 103);
+	background: rgba(64, 71, 103, 0);
+	text-align: left;
+	margin-left: 20%;
+	width: auto;
+	min-width: 100%;
+	line-height: 40px;
+	text-shadow: 0 5px 5px rgb(34, 34, 34);
+}
+.header {
+	line-height: 0.5;
+	text-align: center;
+}
+  .header span {
+	display: inline-block;
+	position: relative;  
+}
+  .header span:before,
+  .header span:after {
+	content: "";
+	position: absolute;
+	height: 18px;
+	border-bottom: 3px solid white;
+	top: 0;
+	width: 600px;
+}
+  .header span:before {
+	right: 100%;
+	margin-right: 10px;
+}
+  .header span:after {
+	left: 100%;
+	margin-left: 10px;
 }
