--- a/style.css
+++ b/style.css
@@ -78,6 +78,24 @@ h1{
 	line-height: 40px;
 	text-shadow: 0 5px 5px rgb(34, 34, 34);
 }
+.col {
+	margin-top: 100px;
+	margin-bottom: 50px;
+	float: left;
+	margin-left: 100px;
+	margin-right: 70px;
+	width: 450px;
+	height: 500px;
+}
+.row {
+	clear: both;
+	display: table;
+}
+.col:hover{
+	opacity: 0.7;
+	transform: translateY(-10px);
+	transition: all 0.3s ease-in;
+}
 #contact p{
 	color: white; 
 	font: bold 24px/45px 'Open Sans', sans-serif; 
@@ -94,7 +112,7 @@ form{
 	background: rgba(240, 248, 255, 0.4);
 	margin-left: 20%;
 	margin-right: 15%;
-	border-radius: 45px;
+	border-radius: 15px;
 }
 form label{
 	font-family: 'Roboto', sans-serif;
@@ -102,9 +120,9 @@ form label{
 	font-weight: lighter;
 	font-size: 36px;
 	color: rgba(15, 15, 15, 0.66);
-	padding-left: 22%;
+	padding-left: 20%;
 }
-form input[type=email], textarea{
+form input[type=email], textarea, input[type=text]{
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	padding: 20px;
 	border-radius: 45px;
@@ -113,10 +131,11 @@ form input[type=email], textarea{
 	font-size: 18px;
 	margin-top: 8px;
 	margin-bottom: 40px;
+	border: 2px solid #111;
 }
 form input[type=submit], input[type=reset]{
 	font-size: 18px;
-	border: 1px solid #111;
+	border: 2px solid #111;
 	width: 100px;
 	height: 50px;
 	margin-left: 37%;
@@ -154,12 +173,12 @@ form input[type=submit]:hover, input[type=reset]:hover{
 	line-height: 0.5;
 	text-align: center;
 }
-  .header span {
+.header span {
 	display: inline-block;
 	position: relative;  
 }
-  .header span:before,
-  .header span:after {
+.header span:before,
+.header span:after {
 	content: "";
 	position: absolute;
 	height: 18px;
@@ -167,11 +186,11 @@ form input[type=submit]:hover, input[type=reset]:hover{
 	top: 0;
 	width: 600px;
 }
-  .header span:before {
+.header span:before {
 	right: 100%;
 	margin-right: 10px;
 }
-  .header span:after {
+.header span:after {
 	left: 100%;
 	margin-left: 10px;
 }
