updated contact me emojis and mailto and updated CSS for the contact me emojis

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ form input[type=submit], input[type=reset]{
 	border: 2px solid #111;
 	width: 100px;
 	height: 50px;
-	margin-left: 37%;
+	margin-left: 34%;
 	margin-bottom: 16px;
 	letter-spacing: 1.5px;
 	border-radius: 100px;
@@ -150,7 +150,10 @@ input[type=reset]{
 	margin-left: 5%;
 }
 form p{
-	padding-left: 28%;
+	padding-left: 22%;
+}
+form span:hover{
+	cursor: pointer;
 }
 form input[type=submit]:hover, input[type=reset]:hover{
 	opacity: 0.4;
