--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html{
 	overflow-x: hidden;
+	scroll-behavior: smooth;
 }
 #menu
 {
@@ -9,34 +10,33 @@ html{
 	overflow: hidden;
 	position: fixed;
 	width: 100%;
-	height: 50px;
+	height: 75px;
 	background-color: #333;
 	display: flex;
 	align-items: stretch;
 }
 li a {
-	height: auto !important;
-	height: 100%;
 	display: block;
-	color: white;
+	height: 42px;
+	padding: 14px 16px;
+	
+	
 	text-align: center;
+	color: white;
 	font-family: 'Roboto', sans-serif;
-	font-size: 20px;
-	padding-top: 10px;
-	padding-left: 16px;
-	padding-right: 16px;
+	font-size: 26px;
 	text-decoration: none;
 	font-weight: 800;
 	letter-spacing: 1px;
 }
-li img{
-	padding-top: 10px;
-	width: 40px;
-	height: 30px;
+
+#menu img{
+	width: 119px;
+	height: 75px;
 }
 
 li a:hover{
-	min-height: 72%;
+	
 	background-color: rgb(107, 107, 107);
 	border-bottom: 5px solid rgb(210, 210, 210);
 	transition: all 0.4s ease;
