--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ html{
 	padding: 0;
 	overflow: hidden;
 	position: fixed;
+	top: 0;
 	width: 100%;
+	z-index: 9999;
 	height: 75px;
 	background-color: #333;
 	display: flex;
@@ -173,6 +175,7 @@ form input[type=submit]:hover, input[type=reset]:hover{
 	text-shadow: 0 5px 5px rgb(34, 34, 34);
 }
 .header {
+	margin-top: 0;
 	line-height: 0.5;
 	text-align: center;
 }
